scripts/nullaway/wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8.txt
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:40: error: [NullAway] dereferenced expression conn is @Nullable
            conn.StopReceiveThread();
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:50: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:60: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:70: error: [NullAway] dereferenced expression conn is @Nullable
        return conn.Receive(0);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:210: error: [NullAway] dereferenced expression sendString is @Nullable
        return Send(sendString.getBytes());
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:221: error: [NullAway] dereferenced expression sendBuffer is @Nullable
        DatagramPacket sendPacket = new DatagramPacket(sendBuffer, sendBuffer.length, this.m_peerAddress, this.m_peerPort);
                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:87: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.payload = payload;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:49: error: [NullAway] dereferenced expression sendString is @Nullable
        return Send(sendString.getBytes());
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:92: error: [NullAway] assigning @Nullable expression to @NonNull field
            m_bufferToSend = bufferToSend;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:46: error: [NullAway] dereferenced expression conn is @Nullable
            conn.StopReceiveThread();
                ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:56: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:67: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:77: error: [NullAway] dereferenced expression conn is @Nullable
        return conn.Receive(maxBlockTimeInMs);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:56: error: [NullAway] dereferenced expression sendString is @Nullable
        return Send(sendString.getBytes());
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:386: error: [NullAway] dereferenced expression task is @Nullable
                task.cancel(false);
                    ^
    (see http://t.uber.com/nullaway )
15 errors
